MP6 version 0.003 MP6-Perl5 - allow nested structures in 'sub' and 'method' signature declarations - updated TODO, ChangeLog, more tests
git-svn-id: http://svn.pugscode.org/pugs@14889 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/v6-MiniPerl6/TODO
+++ b/v6/v6-MiniPerl6/TODO
@@ -1,8 +1,7 @@
-Bootstrapping MiniPerl6 in Perl5
+MiniPerl6 in Perl5
 
-- reduce the amount of RAM needed to recompile MP6
-
-- Recompile it several times using itself, in order to check the stability of the Bootstrap
+- generate 'my' variables for subroutine signatures;
+  currently depends on autovivification
 
 - Freeze the project, because it can be useful to bootstrap other VMs
 
@@ -51,10 +50,4 @@ Missing Features of the Token sub-compiler
 
 Bugs
 
-- Hash binding implementation is wrong
-
-- 'for' loops always need to specify '@{}', as in:  for ( @$a ) {...}
-  even if the variable has a '@' sigil - FIXED
-
-- binding ':=' and param binding should share implementations 
-
+- ...
