--- a/v6/v6-MiniPerl6/ChangeLog
+++ b/v6/v6-MiniPerl6/ChangeLog
@@ -1,4 +1,11 @@
-- added Parrot emitter and 'mp6-parrot' script
+0.003  2006-12-12
+- All tests converted to TAP format
+- Parrot backend:
+  - added Parrot emitter and 'mp6-parrot' script
+  - passes several tests
+  - 'Match' class written in MP6
+- Perl5 backend:
+  - parameter binding with complex data structures 
 
 0.002  2006-11-18
 - fixed array expansion in 'for @x {...}'
