* Remove support for GHC 6.4.x. * Add support for GHC 6.7.x.
git-svn-id: http://svn.pugscode.org/pugs@14895 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,7 @@
 BUILDING PUGS
 -------------
 
-Pugs needs the Glasgow Haskell Compiler (GHC), preferably version 6.6 or above.
-At the moment the minimum requirement is GHC 6.4.1 or above, but we plan to
-discontinue support for GHC 6.4.* in the next release.
+Pugs needs the Glasgow Haskell Compiler (GHC), version 6.6 or above.
 
 To install GHC, download a binary build from http://haskell.org/ghc/.
 Although source code for GHC is available, it will take a very long time to
@@ -12,7 +10,7 @@ build by yourself.
 Additionally, Pugs uses the Cabal framework (http://haskell.org/cabal/),
 which is usually bundled with GHC itself.
 
-v6-pugs (see <http://perlmonks.org/?node_id=559083>) needs the CPAN modules
+v6-alpha (see <http://perlmonks.org/?node_id=559083>) needs the CPAN modules
 Devel::Caller, Module::Compile and Pugs::Compiler::Rule. The first one is
 dependent on Module::Build with C_support, so install ExtUtils::CBuilder and
 ExtUtils::ParseXS first. Satisfy all with one command:
