* Added myself (Nei) to AUTHORS to test svn commit, as per recommendation by audreyt.
git-svn-id: http://svn.pugscode.org/pugs@14913 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@ Adam Preble
 Adrian "adehohum" Taylor
 AEvar Arnfjord Bjarmason         (AVAR)      Ævar Arnfjörð Bjarmason
 Agent Zhang                      (AGENT)     章亦春
+Ailin "Nei" Nemui
 Aldo "dada" Calpini              (ACALPINI)
 Alin "alinbsp" Iacob             (ALIN)
 Allison Randal                   (ARANDAL)
