--- a/t/examples/99problems/README
+++ b/t/examples/99problems/README
@@ -6,10 +6,10 @@ FAQ.
 Q.  99 != 84.  What gives?
 A.  Who knows?  I didn't write 'em.
 
-Q.  Are the done?
+Q.  Are they done?
 A.  Nope.  Probably never will be, even if all are answered.  Find a problem
 and see if you can solve it.  The lower the problems number, the more likely
-it has been "solved".  (This FAQ was writtenn immediately after solving
+it has been "solved".  (This FAQ was written immediately after solving
 problem 24).
 
 Q.  Your solution is a big bucket of suck.  I can do better.
